# cookiecutter-pypkg

./: CONTRIBUTING.md  LICENSE  README.rst  cookiecutter.json
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .bumpversion.cfg  .coveragerc  .gitignore  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  entry_points.cfg  make_help.py  pytest.ini  read_version_file.py  setup.cfg
{{cookiecutter.project_slug}}/docs/: Makefile  conf.py  index.rst
{{cookiecutter.project_slug}}/packaging/apk/: APKBUILD
{{cookiecutter.project_slug}}/packaging/rpm/: {{cookiecutter.project_slug}}.sh  {{cookiecutter.project_slug}}.spec
{{cookiecutter.project_slug}}/tests/: test_greet.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/: __init__.py  cli.py  greet.py
