[metadata]
name = {{ cookiecutter.package_name }}
version = attr: {{ cookiecutter.package_name }}.__version__
description = {{ cookiecutter.project_short_description }}
long_description = file: README.rst, HISTORY.rst
author = {{ cookiecutter.author }}
author_email = {{ cookiecutter.email }}
url = {{ cookiecutter.project_url }}
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
{%- if cookiecutter.license == 'BSD License' %}
    License :: OSI Approved :: BSD License
{%- endif %}
{%- if cookiecutter.license == 'MIT License' %}
    License :: OSI Approved :: MIT License
{%- endif %}
{%- if cookiecutter.license == 'ISC License (ISCL)' %}
    License :: OSI Approved :: ISC License (ISCL)
{%- endif %}
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[options]
zip_safe = False
include_package_data = True
packages = find:
entry_points = file: entry_points.cfg
install_requires =
    # TODO: put package requirements here

[options.entry_points]
console_scripts =
    {{ cookiecutter.project_slug }} = {{ cookiecutter.package_name }}.cli:main

[options.extras_require]
testing =
    # TODO: put package testing requirements here
develop =
    coverage
    flake8
    mypy
    # TODO: put package develop requirements here

[options.packages.find]
exclude =
    tests
    # TODO: put exclusion patterns here

[wheel]
universal = 1
