[metadata]
name = {{ cookiecutter.package_name }}
version = attr: read_version_file.version
description = {{ cookiecutter.project_short_description }}
long_description = file: README.rst, HISTORY.rst
author = {{ cookiecutter.author }}
author_email = {{ cookiecutter.email }}
url = {{ cookiecutter.project_url }}
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
{%- if cookiecutter.license == 'BSD License' %}
    License :: OSI Approved :: BSD License
{%- endif %}
{%- if cookiecutter.license == 'MIT License' %}
    License :: OSI Approved :: MIT License
{%- endif %}
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    # TODO: put package requirements here

[options.entry_points]
console_scripts =
    {{ cookiecutter.project_slug }} = {{ cookiecutter.package_name }}.cli:main

[options.extras_require]
testing =
{%- if cookiecutter.test_runner == 'pytest' %}
    pytest
{%- endif %}
    # TODO: put package testing requirements here
develop =
    bumpversion
    coverage
    flake8
    mypy
    sphinx
    watchdog
    # TODO: put package develop requirements here

[options.packages.find]
exclude =
    tests
    # TODO: put exclusion patterns here

[wheel]
universal = 1
